<resources>
    <string name="app_name">Roding</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="hospital_locator">HOSPITAL LOCATOR</string>
    <string name="my_details">MY DETAILS</string>
    <string name="my_roding_id">MY RODING ID</string>
    <string name="socials">SOCIALS</string>
    <string name="faqs">FAQS</string>
    <string name="contact_us">CONTACT US</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="id">ID</string>
    <string name="enter_email">Enter your email address</string>
    <string name="submit">Submit</string>
    <string name="return_to_login">Return to Login</string>
    <string name="title_hospital_locator">HOSPITAL LOCATOR</string>
    <string name="get_directions">GET DIRECTIONS</string>
    <string name="hospital_text_caps">HOSPITAL</string>
    <string name="state_caps">STATE</string>
    <string name="title_my_details">MY DETAILS</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="middle_name">MIDDLE NAME</string>
    <string name="card_no">CARD NO</string>
    <string name="address">ADDRESS</string>
    <string name="title_my_roding_id">MY RODING ID</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="status">STATUS</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="connect_to_google">Connect to Google +</string>
    <string name="connect_to_tw">Connect to Twitter</string>
    <string name="connect_to_fb">Connect to facebook</string>
    <string name="title_socials">SOCIALS</string>
    <string name="title_faqs">FAQS</string>
    <string name="title_contact_us">CONTACT US</string>
    <string name="send">SEND</string>
    <string name="phone_no">PHONE NO</string>
    <string name="call_us_now">CALL US NOW!</string>
    <string name="title_about_us">ABOUT US</string>
    <string name="title_change_password">CHANGE PASSWORD</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile">Mobile No</string>
    <string name="roding_id">Roding ID</string>
    <string name="other_names">OTHER NAMES</string>
    <string name="company">COMPANY</string>
    <string name="hospital">HOSPITAL</string>
    <string name="plan">PLAN</string>
    <string name="sex">SEX</string>
    <string name="dob">DATE OF BIRTH</string>
    <string name="mobile_caps">MOBILE NO</string>
    <string name="active">ACTIVE</string>
    <string name="email_caps">EMAIL</string>
    <string name="id_no">ID NO</string>
    <string name="connect_to_linkedin">CONNECT TO LINKEDIN</string>
    <string name="submit_claim">SUBMIT CLAIM</string>
    <string name="member_search">MEMBER SEARCH</string>
    <string name="member_id">MEMBER ID</string>
    <string name="comments">COMMENTS</string>
    <string name="full_name">FULL NAME</string>
    <string name="title_submit_claim">SUBMIT CLAIM</string>
    <string name="title_member_search">MEMBER SEARCH</string>
    <string name="search">Search</string>
    <string name="next">Next</string>
    <string name="claim_amount">CLAIM AMOUNT</string>
    <string name="email_address">Email Address</string>
    <string name="request_usage">REQUEST USAGE</string>
    <string name="title_request_usage">REQUEST USAGE</string>
    <string name="surname_text_caps">SURNAME</string>
    <string name="status_caps">STATUS</string>
    <string name="first_name_label">FIRST NAME:</string>
    <string name="surname_label_caps">SURNAME:</string>
    <string name="othername_label_caps">OTHER NAMES:</string>
    <string name="id_label_caps">ID NO:</string>
    <string name="status_label_caps">STATUS:</string>
    <string name="from_date">FROM DATE</string>
    <string name="to_date">TO DATE</string>
    <string name="get_member">Get Member</string>
    <string name="dynamic_name">Name: %s</string>
    <string name="submit_request">Submit Request</string>
    <string name="city_caps">CITY</string>
    <string name="diagnosis">DIAGNOSIS</string>
    <string name="attendance_date">ATTENDANCE DATE</string>
    <string name="unit_amount">UNIT PRICE (NGN)</string>
    <string name="qty">QTY</string>
    <string name="add">Add</string>
    <string name="medication">MEDICATION</string>
    <string name="medication_label">MEDICATION:</string>
    <string name="unit_price_label">UNIT PRICE:</string>
    <string name="quantity_label">QUANTITY:</string>
    <string name="total_price_label">TOTAL_PRICE:</string>
    <string name="entered_by">ENTERED BY</string>
    <string name="hospital_details">Hospital Details</string>
    <string name="patient_details">Patient Details</string>
    <string name="quantity">QUANTITY</string>
    <string name="total_price">TOTAL PRICE</string>
    <string name="total">TOTAL</string>
</resources>
