<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context="roding.soconcepts.com.roding.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topHalf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/signinBtn"
                style="@style/link_button"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:text="@string/signin" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottomHalf"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="15dp"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="15dp">

            <ScrollView style="@style/scroll_style">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/mobile_text"
                        style="@style/textfield_style"
                        android:hint="@string/mobile"
                        android:inputType="phone" />

                    <EditText
                        android:id="@+id/password_text"
                        style="@style/textfield_style"
                        android:hint="@string/password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/confirm_password_text"
                        style="@style/textfield_style"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />

                    <EditText
                        android:id="@+id/roding_id_text"
                        style="@style/textfield_style"
                        android:hint="@string/roding_id" />

                    <EditText
                        android:id="@+id/email_text"
                        style="@style/textfield_style"
                        android:hint="@string/email" />

                    <Button
                        android:id="@+id/registerBtn"
                        style="@style/button_style"
                        android:text="@string/register" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>