<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitebg"
    android:orientation="vertical"
    tools:context="roding.soconcepts.com.roding.activity.ForgotPasswordActivity">

    <ScrollView style="@style/scroll_style">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topHalf"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:src="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bottomHalf"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                android:layout_weight="0.6"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="23sp"
                    android:layout_margin="5dp"
                    android:text="@string/forgot_password" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:text="@string/enter_email" />

                <EditText
                    android:id="@+id/email_text"
                    style="@style/textfield_style"
                    android:hint="@string/email" />

                <Button
                    android:id="@+id/submitBtn"
                    style="@style/button_style"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/signinBtn"
                    style="@style/link_button"
                    android:textColor="@color/red"
                    android:layout_marginTop="45dp"
                    android:layout_gravity="center"
                    android:text="@string/return_to_login" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>