<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    android:orientation="vertical"
    tools:context="roding.soconcepts.com.roding.activity.LoginActivity">

    <ScrollView style="@style/scroll_style">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/topHalf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/bottomHalf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_margin="15dp"
                android:layout_weight="0.3"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/mobile_text"
                    style="@style/textfield_style"
                    android:hint="@string/email_address" />

                <EditText
                    android:id="@+id/password_text"
                    style="@style/textfield_style"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/signinBtn"
                    style="@style/button_style"
                    android:text="@string/signin" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/registerBtn"
                        style="@style/link_button"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/register" />

                    <Button
                        android:id="@+id/forgotPasswordBtn"
                        style="@style/link_button"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:gravity="right|center_vertical"
                        android:text="@string/forgot_password" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>