<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_request_usage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rodingtransparentbg"
        android:paddingBottom="3dp"
        tools:context=".activity.HospitalLocatorActivity">

        <include
            android:id="@+id/app_bar"
            layout="@layout/app_bar_2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/app_bar"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/topHalf"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="45dp"
                        android:src="@drawable/logo" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:layout_margin="3dp"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/member_id"
                        style="@style/textfield_rec_style"
                        android:layout_width="match_parent"
                        android:hint="@string/member_id" />

                    <EditText
                        android:id="@+id/from_date"
                        style="@style/textfield_rec_style"
                        android:layout_width="match_parent"
                        android:hint="@string/from_date" />

                    <EditText
                        android:id="@+id/to_date"
                        style="@style/textfield_rec_style"
                        android:layout_width="match_parent"
                        android:hint="@string/to_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp">

                        <Button
                            android:id="@+id/getMember"
                            style="@style/button_style"
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            android:text="@string/get_member" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:padding="8dp"
                        android:visibility="gone"
                        android:text="@string/dynamic_name" />

                    <Button
                        android:id="@+id/submit"
                        style="@style/button_style"
                        android:layout_width="match_parent"
                        android:visibility="gone"
                        android:text="@string/submit_request" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <fragment
        android:id="@+id/fragment_navigation_drawer"
        android:name="roding.soconcepts.com.roding.fragment.NavigationDrawerFragment"
        android:layout_width="@dimen/nav_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:layout="@layout/fragment_navigation_drawer"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>